--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,8 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem !important; }
 
-.button-about {
-  margin-left: 1.5rem; }
+.btn-center {
+  margin-top: 8rem !important; }
 
 .footer {
   display: flex;
@@ -172,66 +172,44 @@ body {
 .section-feature {
   padding: 4rem 0rem 15rem 0rem; }
 
-.section-layout {
+.section-content {
   background-color: #f7f7f7;
-  padding: 7rem 2rem; }
+  padding: 3rem 2rem; }
 
-.button:link, .button:visited {
+.btn {
+  display: inline-block;
   text-decoration: none;
-  text-transform: uppercase;
-  padding: 1rem 2rem;
-  display: inline-block;
-  border-radius: 100px;
-  font-size: 1.6rem;
-  position: relative;
-  transition: all .2s; }
-
-.button--white {
-  color: #787878;
-  background-color: white; }
-
-.button:hover {
-  opacity: 0.8;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2); }
-
-.button:active {
-  transform: translateY(1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
-
-.button::after {
-  display: inline-block;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  content: "";
-  border-radius: 100px;
-  z-index: -1;
-  transition: all .2s; }
-
-.button--dark {
-  background-color: #b1a296;
-  color: white; }
-
-.button-text {
-  transition: all .2s; }
-  .button-text:link, .button-text:visited {
-    color: #5d5c61;
-    display: inline-block;
-    text-decoration: none;
-    border-bottom: 1px solid #5d5c61;
-    padding: .3rem;
-    font-size: 1.6rem; }
-    @media (max-width: 600px) {
-      .button-text:link, .button-text:visited {
-        font-size: 1rem;
-        padding: 0.5rem 1rem; } }
-  .button-text:hover {
-    background-color: #5d5c61;
-    color: white;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15); }
-  .button-text:active {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    transform: translateY(0.5rem); }
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: black;
+  padding: 8px 35px;
+  border-radius: 50px;
+  cursor: pointer;
+  min-width: 100px;
+  transition: all .2s ease;
+  user-select: none;
+  text-align: center;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3); }
+  .btn--size-l {
+    padding: 12px 40px; }
+  .btn--size-s {
+    padding: 6px 25px; }
+  .btn:hover {
+    opacity: 0.8; }
+  .btn + .btn {
+    margin-left: 16px; }
+  .btn--success {
+    background-color: #557a95; }
+  .btn--warn {
+    background-color: rgba(255, 183, 2, 0.9); }
+  .btn--deny {
+    background-color: rgba(255, 98, 61, 0.6); }
+  .btn--infor {
+    background-color: white; }
+  .btn--disabled, .btn[disabled] {
+    opacity: 0.5 !important;
+    pointer-events: none; }
 
 .content-ctn {
   display: flex;
@@ -403,7 +381,7 @@ body {
     color: white;
     text-decoration: none;
     line-height: 46px;
-    padding: 0 24px;
+    padding: 0 15px;
     display: block; }
   .nav-list li:hover a {
     color: black;
@@ -541,12 +519,22 @@ body {
     opacity: 1;
     height: var(--percent); } }
 
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(calc(100% + 32px)); }
+  to {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes fadeOut {
+  to {
+    opacity: 0; } }
+
 .end-ctn {
-  padding: 5rem 10rem;
   display: flex;
   flex-direction: row;
-  background-color: #7395ae;
-  border-radius: 70px; }
+  padding: 0 15rem; }
 
 .the-end__first {
   padding: 0.4rem 1.6rem;
@@ -564,9 +552,64 @@ body {
 .the-end__second-one {
   flex: 1;
   padding: 4px 16px;
-  background-color: #f7f7f7; }
+  background-color: white; }
 
 .the-end__second-two {
   flex: 1;
   padding: 4px 16px;
   background-color: #c0d2e3; }
+
+#toast {
+  position: fixed;
+  top: 46px;
+  right: 0;
+  z-index: 999999; }
+
+.toast {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 2px;
+  padding: 20px 0;
+  min-width: 200px;
+  max-width: 350px;
+  border-left: 4px solid;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
+  transition: all linear 0.3s; }
+  .toast--success {
+    border-color: #47d864; }
+  .toast--success .toast__icon {
+    color: #47d864; }
+  .toast--info {
+    border-color: #2f86eb; }
+  .toast--info .toast__icon {
+    color: #2f86eb; }
+  .toast--warning {
+    border-color: #ffc021; }
+  .toast--warning .toast__icon {
+    color: #ffc021; }
+  .toast--error {
+    border-color: #ff623d; }
+  .toast--error .toast__icon {
+    color: #ff623d; }
+  .toast + .toast {
+    margin-top: 24px; }
+  .toast__icon {
+    font-size: 24px; }
+  .toast__icon, .toast__close {
+    padding: 0 16px; }
+  .toast__body {
+    flex-grow: 1; }
+  .toast__title {
+    font-size: 16px;
+    font-weight: 600;
+    color: #333; }
+  .toast__msg {
+    font-size: 14px;
+    color: #888;
+    margin-top: 6px;
+    line-height: 1.5; }
+  .toast__close {
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.3);
+    cursor: pointer; }
