--- a/sass/Base/_animation.scss
+++ b/sass/Base/_animation.scss
@@ -38,3 +38,19 @@
         height: var(--percent);
     }
 }
+@keyframes slideInLeft {
+    from {
+      opacity: 0;
+      transform: translateX(calc(100% + 32px));
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes fadeOut {
+    to {
+      opacity: 0;
+    }
+  }
