--- a/sass/Base/_utilities.scss
+++ b/sass/Base/_utilities.scss
@@ -10,7 +10,7 @@
 {
     margin-bottom: 1.5rem !important;
 }
-.button-about
+.btn-center
 {
-    margin-left: 1.5rem;
+    margin-top: 8rem !important;
 }
