--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -15,14 +15,8 @@
 {
     padding: 4rem 0rem 15rem 0rem;
 }
-.section-layout 
+.section-content 
 {
     background-color: $color-gray-light;
-    padding: 7rem 2rem;
-}
-.section-chart
-{
-}
-.section-end
-{
+    padding: 3rem 2rem;
 }
