--- a/sass/Components/_social.scss
+++ b/sass/Components/_social.scss
@@ -3,12 +3,30 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    @include respond (phone)
+    {
+        flex-direction: column;
+    }
+    @include respond (miniphone)
+    {
+        flex-direction: column;
+    }
 }
 .social-box
 {
     font-size: 1.5rem;
     flex-basis: 22%;
     padding: 2.5rem 2.5rem 4rem 2.5rem;
+    @include respond (phone)
+    {
+        padding: 1rem 1rem 2rem 1rem;
+        margin-top: 1rem;
+    }
+    @include respond (miniphone)
+    {
+        padding: 1rem 1rem 2rem 1rem;
+        margin-top: 1rem;
+    }
     text-align: center;
     border-radius: 5rem;
     transition: all .2s;
