--- a/sass/Abstracts/_animation.scss
+++ b/sass/Abstracts/_animation.scss
@@ -1,56 +1,34 @@
-@keyframes animationTopDown
+@keyframes growth 
 {
-    0%
+    from 
     {
-        opacity: 0;
-        transform: translate(0,-100px);
-    }
-    80%
-    {
-        transform: translate(0,-20px);
-    }
-    100%
-    {
-        opacity: 1;
-        transform: translate(0,0);
-    }
-}
-@keyframes moveInBottom
-{
-    0%
-    {
-        opacity: 0;
-        transform: translateY(10px);
-    }
-    100%
-    {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-@keyframes growth {
-    from {
         opacity: 0;
         height: calc(var(--percent) - 50%);
     }
-    to {
+    to 
+    {
         opacity: 1;
         height: var(--percent);
     }
 }
-@keyframes slideInLeft {
-    from {
+@keyframes slideInLeft 
+{
+    from 
+    {
       opacity: 0;
       transform: translateX(calc(100% + 32px));
     }
-    to {
+    to 
+    {
       opacity: 1;
       transform: translateX(0);
     }
   }
   
-  @keyframes fadeOut {
-    to {
+  @keyframes fadeOut 
+  {
+    to 
+    {
       opacity: 0;
     }
   }
