--- a/sass/Base/_typography.scss
+++ b/sass/Base/_typography.scss
@@ -90,6 +90,10 @@ body
     }   
     @include respond (phone)
     {
-        font-size: 1rem;
+        font-size: 1.3rem;
     }  
+    @include respond (miniphone)
+    {
+        font-size: 1.3rem;
+    }
 }
