--- a/sass/Components/_end.scss
+++ b/sass/Components/_end.scss
@@ -32,12 +32,12 @@
 .the-end__second-one 
 {
     flex: 1;
-    padding: 4px 16px;
+    padding: 0.4rem 1.6rem;
     background-color: $color-white;
 }
 .the-end__second-two 
 {
     flex: 1;
-    padding: 4px 16px;
+    padding: 0.4rem 1.6rem;
     background-color: rgb(192, 210, 227);
 }
