--- a/sass/Components/_form.scss
+++ b/sass/Components/_form.scss
@@ -1,26 +1,40 @@
 .form-left
 {
     flex-basis: 30%;
+    @include respond (phone)
+    {
+        flex-basis: 50%;
+        margin: auto;
+        padding: 2rem 1rem;
+    }
 }
-
 .form-right
 {
     flex-basis: 30%;
+    @include respond (phone)
+    {
+        flex-basis: 50%;
+        margin: auto; 
+        padding: 2rem 1rem;
+    }
 }
-
 .form 
 {
-    width: 360px;
-    min-height: 100px;
-    padding: 32px 24px;
+    width: 36rem;
+    min-height: 10rem;
+    padding: 3.2rem 2.4rem;
     text-align: center;
     background: #fff;
     border-radius: 2px;
-    margin: 24px;
+    margin: 2.4rem;
     align-self: center;
     box-shadow: 0 2px 5px 0 rgba(51,62,73,.1);
+    @include respond (phone)
+    {
+        padding: 0;
+        margin: 0;
+    }
 }
-
 .form .heading 
 {
     font-size: 2rem;
@@ -33,14 +47,14 @@
     font-size: 1.6rem;
     font-weight: lighter;
     line-height: 2.4rem;
-    margin-top: 16px;
+    margin-top: 1.6rem;
     font-weight: 300;
 }
 
 .form-group 
 {
     display: flex;
-    margin-bottom: 16px;
+    margin-bottom: 1.6rem;
     flex-direction: column;
 }
 
@@ -61,7 +75,7 @@
 .form-control 
 {
     height: 40px;
-    padding: 8px 12px;
+    padding: 0.8rem 1.2rem;
     border: 1px solid #b3b3b3;
     border-radius: 3px;
     outline: none;
@@ -87,20 +101,20 @@
 {
     font-size: 1.2rem;
     line-height: 1.6rem;
-    padding: 4px 0 0;
+    padding: 0.4rem 0 0;
 }
 
 .form-submit 
 {
     outline: none;
     background-color: $color-primary-dark;
-    margin-top: 12px;
-    padding: 12px 16px;
+    margin-top: 1.2rem;
+    padding: 1.2rem 1.6rem;
     font-weight: 600;
     color: #fff;
     border: none;
     width: 100%;
-    font-size: 14px;
+    font-size: 1.4rem;
     border-radius: 8px;
     cursor: pointer;
 }
@@ -112,5 +126,5 @@
 
 .spacer 
 {
-    margin-top: 36px;
+    margin-top: 3.6rem;
 }
