--- a/sass/Components/_toast.scss
+++ b/sass/Components/_toast.scss
@@ -11,7 +11,7 @@
     align-items: center;
     background-color: #fff;
     border-radius: 2px;
-    padding: 20px 0;
+    padding: 2rem 0;
     min-width: 200px;
     max-width: 350px;
     border-left: 4px solid;
@@ -51,16 +51,16 @@
     }
     & + & 
     {
-        margin-top: 24px;
+        margin-top: 2.4rem;
     }
     &__icon 
     {
-        font-size: 24px;
+        font-size: 2.4rem;
     }
     &__icon,
     &__close 
     {
-        padding: 0 16px;
+        padding: 0 1.6rem;
     }
     &__body 
     {
@@ -68,20 +68,20 @@
     }
     &__title 
     {
-        font-size: 16px;
+        font-size: 1.6rem;
         font-weight: 600;
         color: #333;
     }
     &__msg 
     {
-        font-size: 14px;
+        font-size: 1.4rem;
         color: #888;
         margin-top: 6px;
         line-height: 1.5;
     }
     &__close 
     {
-        font-size: 20px;
+        font-size: 2rem;
         color: rgba(0, 0, 0, 0.3);
         cursor: pointer;
     }
