--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -14,7 +14,9 @@
     } 
     &__logo
     {
-        height: 7rem;
+        display: none;
+        width: 2rem;
+        height: 2rem;
     }   
    
 }
