--- a/sass/Components/_end.scss
+++ b/sass/Components/_end.scss
@@ -3,12 +3,12 @@
     display: flex;
     flex-direction: row;
     padding: 0 15rem;
-    @include respond (phone)
+    @include respond (mobile)
     {
         flex-direction: column;
         padding: 0;
     }
-    @include respond (miniphone)
+    @include respond (mini-mobile)
     {
         flex-direction: column;
         padding: 0;
