--- a/sass/Abstracts/_variables.scss
+++ b/sass/Abstracts/_variables.scss
@@ -7,6 +7,10 @@ $color-gray-light: rgb(247, 247, 247);
 $color-text: rgb(120, 120, 120);
 $color-white:rgb(255, 255, 255);
 $color-black: rgb(0, 0, 0);
+$color-warn: rgb(255, 183, 2);
+$color-deny:rgb(255, 98, 61);
+$color-success: rgb(71, 216, 100);
+$color-infor:rgb(47, 134, 235);
 $default-font-size: 1.6rem;
 $grid-with:114rem;
 $gutter-vertical:8rem;
