--- a/sass/Components/_navigation.scss
+++ b/sass/Components/_navigation.scss
@@ -4,19 +4,11 @@
     position: fixed;
     top: 0;
     left: 0;
-    min-height: 42px;
+    min-height: 20px;
     width: 100%;
     z-index: 900;
     justify-content: space-between;
     background-color: $color-black;
-    @include respond (phone)
-    {
-        font-size: 10px;
-    }
-    @include respond (miniphone)
-    {
-        font-size: 10px;
-    }
     &-list li 
     {
         position: relative;
@@ -33,17 +25,18 @@
     {
         color: $color-white;
         text-decoration: none;
-        line-height: 46px;
+        line-height: 38px;
         padding: 0 1.5rem;
         display: block;
-        @include respond (phone)
+        @include respond (mobile)
         {
             padding: 0 0.5rem;
+            line-height: 26px;
         }
-        @include respond (miniphone)
+        @include respond (mini-mobile)
         {
             padding: 0 0.2rem;
-            margin: 0;
+            line-height: 26px;
         }
     }
     &-list li:hover a 
