--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -29,11 +29,11 @@
     &__list
     {
         list-style: none;
-        @include respond (phone)
+        @include respond (mobile)
         {
             display: none;
         }
-        @include respond (miniphone)
+        @include respond (mini-mobile)
         {
             display: none;
         }
